data/derived/sp14/progs/unify/prog4244.ml.out
Characters 57-64:
  in g (f) b
     ^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
